--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html
+<head>
+    <title>Carrie Oprea</title>    
+</head>
 
+<body>
+    <header class="navigation">
+        <div class="inline-block and logo">
+            <img src="logo.png">
+        </div>
+        <nav class="inline-block">
+            <ul>
+                <li>About</li>
+                <li>Skills</li>
+                <li>Work</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
+        <section class="heroimg">
+            <div class="content">
+                <img src="homepage photo.png">
+                <p>Product Designer.  Creative Thinker.  Problem Solver.</p>
+                <button type="button">Download Resume</button>  
+            </div>
+            <footer>
+                <ul>
+                    <li>About</li>
+                    <li>Skills</li>
+                    <li>Work</li>
+                    <li>Contact</li>
+                </ul>
+            </footer>
+        </section>
+    </header>
+</body>
+
+ </html>   
